[gd_scene load_steps=6 format=3 uid="uid://bhkcxp4hn6jfe"]

[ext_resource type="PackedScene" uid="uid://63uudvy72sft" path="res://Map/MapGenerator.tscn" id="1_tj78m"]
[ext_resource type="Script" path="res://MapInstance.gd" id="1_x5nqc"]
[ext_resource type="PackedScene" uid="uid://bkc5h0dbk48mj" path="res://Player/Player.tscn" id="2_x5f1s"]
[ext_resource type="Script" path="res://Enemies/EnemySpawner.gd" id="3_gytb1"]
[ext_resource type="PackedScene" uid="uid://b0blmjekr6dfc" path="res://Gear/Weapons/Pistol/Pistol.tscn" id="5_r8ssj"]

[node name="World" type="Node2D" node_paths=PackedStringArray("player")]
script = ExtResource("1_x5nqc")
player = NodePath("Player")

[node name="MapGenerator" parent="." instance=ExtResource("1_tj78m")]

[node name="XP" type="Node2D" parent="."]

[node name="Bullets" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]
script = ExtResource("3_gytb1")
spawn_rate = 1.0
spawn_rate_min = 0.5
spawn_rate_decrease = 0.5
spawn_rate_decrease_rate = 1.0

[node name="Player" parent="." node_paths=PackedStringArray("weapon") instance=ExtResource("2_x5f1s")]
position = Vector2(576, 576)
weapon = NodePath("Pistol")
move_speed = 120
health = 20

[node name="Pistol" parent="Player" instance=ExtResource("5_r8ssj")]

[connection signal="on_enemy_count_changed" from="Enemies" to="Player" method="_on_enemy_count_changed"]
[connection signal="on_enemy_killed" from="Enemies" to="." method="_on_enemy_killed"]
